# tinyxml-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  tinyxml.pc.in
